// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden server sites: cappedPartner > derives the cached money columns (recomputeDealMoney, dealMoneyColumns) 1`] = `
{
  "columns": {
    "addersInsideRuleCents": 0,
    "addersOutsideRuleCents": 700000,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 550,
    "dealerFeePct": 65,
    "finalPriceCents": 29589429,
    "itcEstimateCents": 0,
  },
  "recompute": {
    "changed": true,
  },
  "rowAfterRecompute": {
    "addersInsideRuleCents": 0,
    "addersOutsideRuleCents": 700000,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 550,
    "dealerFeePct": 65,
    "finalPriceCents": 29589429,
    "itcEstimateCents": 0,
  },
}
`;

exports[`golden server sites: cappedPartner > estimates and pays the rep (estimatedSolarCommission, computeSolarCommissionsForProject) 1`] = `
{
  "created": 1,
  "estimate": {
    "basis": "per_watt",
    "fromSnapshot": false,
    "grossCents": 191400,
    "netCents": 191400,
    "state": "estimate",
  },
  "line": {
    "amount": 191400,
    "baseAmount": 12760,
    "label": "Solar per-watt ($0.15/W · 12,760 W)",
    "solarBasis": "per_watt",
    "solarGrossAmount": 191400,
  },
  "refusals": [],
}
`;

exports[`golden server sites: cappedPartner > generates the document and stamps what reads it (generateProposalVersion, restampLeadValue, solarContractByLead) 1`] = `
{
  "leadValueCents": 10712600,
  "options": [
    {
      "adderLinesFinal": [
        [
          "Re-roof",
          2000000,
        ],
      ],
      "addersFinalCents": 2000000,
      "baseFinalCents": 7018000,
      "creditAmountCents": 8876829,
      "credits": [
        [
          "itc",
          30,
          8876829,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 20571429,
      "finalCents": 29589429,
      "finalPpwCents": 2319,
      "financedCents": 29589429,
      "financedCreditsAppliedCents": 10712600,
      "key": "quoted:loan",
      "label": "Capped Partner · 30 Year Solar",
      "monthlyCents": 82193,
      "monthlyCreditsAppliedCents": 29757,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 10712600,
      "paydownCents": null,
      "postSolarMonthlyCents": 1345,
      "product": "loan",
      "programmeLabel": "30 Year Solar",
      "quoted": true,
      "savings": {
        "netCents": -17880806,
        "paidCents": 29589480,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": 996154,
        "paidCents": 10712520,
        "paybackYear": 25,
      },
      "signTodayCents": 10000000,
      "stickerPpwCents": 550,
      "totalCreditsAppliedCents": 29589429,
    },
    {
      "adderLinesFinal": [
        [
          "Re-roof",
          700000,
        ],
      ],
      "addersFinalCents": 700000,
      "baseFinalCents": 2462680,
      "creditAmountCents": 3108804,
      "credits": [
        [
          "itc",
          30,
          3108804,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 7200000,
      "finalCents": 10362680,
      "finalPpwCents": 812,
      "financedCents": 10362680,
      "financedCreditsAppliedCents": 7253876,
      "key": "cash",
      "label": "Pay in full",
      "monthlyCents": null,
      "monthlyCreditsAppliedCents": null,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 7253876,
      "paydownCents": null,
      "postSolarMonthlyCents": 1345,
      "product": "cash",
      "programmeLabel": null,
      "quoted": false,
      "savings": {
        "netCents": -1377368,
        "paidCents": 10362680,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": 1731436,
        "paidCents": 10362680,
        "paybackYear": 22,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 193,
      "totalCreditsAppliedCents": 10362680,
    },
    {
      "adderLinesFinal": [
        [
          "Re-roof",
          933333,
        ],
      ],
      "addersFinalCents": 933333,
      "baseFinalCents": 3279320,
      "creditAmountCents": 4143796,
      "credits": [
        [
          "itc",
          30,
          4143796,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 9600000,
      "finalCents": 13812653,
      "finalPpwCents": 1082,
      "financedCents": 13812653,
      "financedCreditsAppliedCents": 9668857,
      "key": "loan:<id>",
      "label": "Example Lender · 25 yr · 6.99%",
      "monthlyCents": 97537,
      "monthlyCreditsAppliedCents": 68276,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 9668857,
      "paydownCents": null,
      "postSolarMonthlyCents": 1345,
      "product": "loan",
      "programmeLabel": "25 yr · 6.99%",
      "quoted": false,
      "savings": {
        "netCents": -20275788,
        "paidCents": 29261100,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": -11497488,
        "paidCents": 20482800,
        "paybackYear": null,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 257,
      "totalCreditsAppliedCents": 13812653,
    },
  ],
  "projectContractValueCents": 29589429,
  "revenueReportCents": 29589429,
  "rowAfterGeneration": {
    "addersInsideRuleCents": 0,
    "addersOutsideRuleCents": 700000,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 550,
    "dealerFeePct": 65,
    "finalPriceCents": 29589429,
    "itcEstimateCents": 0,
  },
  "topLevel": {
    "finalCents": 29589429,
    "financedCents": 29589429,
    "netFinalCreditsAppliedCents": 10712600,
  },
}
`;

exports[`golden server sites: cash > derives the cached money columns (recomputeDealMoney, dealMoneyColumns) 1`] = `
{
  "columns": {
    "addersInsideRuleCents": 150000,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 310,
    "dealerFeePct": 0,
    "finalPriceCents": 2630000,
    "itcEstimateCents": 0,
  },
  "recompute": {
    "changed": true,
  },
  "rowAfterRecompute": {
    "addersInsideRuleCents": 150000,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 310,
    "dealerFeePct": 0,
    "finalPriceCents": 2630000,
    "itcEstimateCents": 0,
  },
}
`;

exports[`golden server sites: cash > estimates and pays the rep (estimatedSolarCommission, computeSolarCommissionsForProject) 1`] = `
{
  "created": 1,
  "estimate": {
    "basis": "redline",
    "fromSnapshot": false,
    "grossCents": 880000,
    "netCents": 880000,
    "state": "estimate",
  },
  "line": {
    "amount": 880000,
    "baseAmount": 2480000,
    "label": "Solar redline ($1.10/W over $2.00/W · 8,000 W)",
    "solarBasis": "redline",
    "solarGrossAmount": 880000,
  },
  "refusals": [],
}
`;

exports[`golden server sites: cash > generates the document and stamps what reads it (generateProposalVersion, restampLeadValue, solarContractByLead) 1`] = `
{
  "leadValueCents": 1791000,
  "options": [
    {
      "adderLinesFinal": [
        [
          "Critter guard",
          150000,
        ],
      ],
      "addersFinalCents": 150000,
      "baseFinalCents": 2480000,
      "creditAmountCents": 789000,
      "credits": [
        [
          "itc",
          30,
          789000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 2630000,
      "finalPpwCents": 329,
      "financedCents": 2630000,
      "financedCreditsAppliedCents": 1791000,
      "key": "cash",
      "label": "Pay in full",
      "monthlyCents": null,
      "monthlyCreditsAppliedCents": null,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 1791000,
      "paydownCents": null,
      "postSolarMonthlyCents": 2115,
      "product": "cash",
      "programmeLabel": null,
      "quoted": true,
      "savings": {
        "netCents": 2963725,
        "paidCents": 2630000,
        "paybackYear": 14,
      },
      "savingsCreditsApplied": {
        "netCents": 3802725,
        "paidCents": 2630000,
        "paybackYear": 11,
      },
      "signTodayCents": 50000,
      "stickerPpwCents": 310,
      "totalCreditsAppliedCents": 2630000,
    },
    {
      "adderLinesFinal": [
        [
          "Critter guard",
          428571,
        ],
      ],
      "addersFinalCents": 428571,
      "baseFinalCents": 3968000,
      "creditAmountCents": 1318971,
      "credits": [
        [
          "itc",
          30,
          1318971,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 4396571,
      "finalPpwCents": 550,
      "financedCents": 4396571,
      "financedCreditsAppliedCents": 3077600,
      "key": "loan:<id>",
      "label": "Capped Partner · 30 Year Solar",
      "monthlyCents": 12213,
      "monthlyCreditsAppliedCents": 8549,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 3077600,
      "paydownCents": null,
      "postSolarMonthlyCents": 2115,
      "product": "loan",
      "programmeLabel": "30 Year Solar",
      "quoted": false,
      "savings": {
        "netCents": 2888714,
        "paidCents": 4396680,
        "paybackYear": 1,
      },
      "savingsCreditsApplied": {
        "netCents": 4207754,
        "paidCents": 3077640,
        "paybackYear": 1,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 496,
      "totalCreditsAppliedCents": 4396571,
    },
    {
      "adderLinesFinal": [
        [
          "Critter guard",
          200000,
        ],
      ],
      "addersFinalCents": 200000,
      "baseFinalCents": 3304000,
      "creditAmountCents": 1051200,
      "credits": [
        [
          "itc",
          30,
          1051200,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 3504000,
      "finalPpwCents": 438,
      "financedCents": 3504000,
      "financedCreditsAppliedCents": 2402800,
      "key": "loan:<id>",
      "label": "Example Lender · 25 yr · 6.99%",
      "monthlyCents": 24743,
      "monthlyCreditsAppliedCents": 16967,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 2402800,
      "paydownCents": null,
      "postSolarMonthlyCents": 2115,
      "product": "loan",
      "programmeLabel": "25 yr · 6.99%",
      "quoted": false,
      "savings": {
        "netCents": -1829175,
        "paidCents": 7422900,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": 503625,
        "paidCents": 5090100,
        "paybackYear": 20,
      },
      "signTodayCents": 50000,
      "stickerPpwCents": 413,
      "totalCreditsAppliedCents": 3504000,
    },
  ],
  "projectContractValueCents": 2630000,
  "revenueReportCents": 2630000,
  "rowAfterGeneration": {
    "addersInsideRuleCents": 150000,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 310,
    "dealerFeePct": 0,
    "finalPriceCents": 2630000,
    "itcEstimateCents": 0,
  },
  "topLevel": {
    "finalCents": 2630000,
    "financedCents": 2630000,
    "netFinalCreditsAppliedCents": 1791000,
  },
}
`;

exports[`golden server sites: storageOnly > derives the cached money columns (recomputeDealMoney, dealMoneyColumns) 1`] = `
{
  "columns": {
    "addersInsideRuleCents": 0,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 2000000,
    "baseFinalPpwCents": 0,
    "dealerFeePct": 50,
    "finalPriceCents": 4800000,
    "itcEstimateCents": 0,
  },
  "recompute": {
    "changed": true,
  },
  "rowAfterRecompute": {
    "addersInsideRuleCents": 0,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 2000000,
    "baseFinalPpwCents": 0,
    "dealerFeePct": 50,
    "finalPriceCents": 4800000,
    "itcEstimateCents": 0,
  },
}
`;

exports[`golden server sites: storageOnly > estimates and pays the rep (estimatedSolarCommission, computeSolarCommissionsForProject) 1`] = `
{
  "created": 1,
  "estimate": {
    "basis": "battery_flat",
    "fromSnapshot": false,
    "grossCents": 100000,
    "netCents": 100000,
    "state": "estimate",
  },
  "line": {
    "amount": 100000,
    "baseAmount": 2,
    "label": "Solar battery flat ($500/battery · 2 batteries)",
    "solarBasis": "battery_flat",
    "solarGrossAmount": 100000,
  },
  "refusals": [],
}
`;

exports[`golden server sites: storageOnly > generates the document and stamps what reads it (generateProposalVersion, restampLeadValue, solarContractByLead) 1`] = `
{
  "leadValueCents": 3360000,
  "options": [
    {
      "adderLinesFinal": [],
      "addersFinalCents": null,
      "baseFinalCents": 4800000,
      "creditAmountCents": 1440000,
      "credits": [
        [
          "itc",
          30,
          1440000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 4800000,
      "finalPpwCents": null,
      "financedCents": 4800000,
      "financedCreditsAppliedCents": 3360000,
      "key": "quoted:loan",
      "label": "Battery Partner · 20 Year Battery",
      "monthlyCents": 20000,
      "monthlyCreditsAppliedCents": 14000,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 3360000,
      "paydownCents": null,
      "postSolarMonthlyCents": 22017,
      "product": "loan",
      "programmeLabel": "20 Year Battery",
      "quoted": true,
      "savings": {
        "netCents": -5267397,
        "paidCents": 4800000,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": -3827397,
        "paidCents": 3360000,
        "paybackYear": null,
      },
      "signTodayCents": 0,
      "stickerPpwCents": null,
      "totalCreditsAppliedCents": 4800000,
    },
    {
      "adderLinesFinal": [],
      "addersFinalCents": null,
      "baseFinalCents": 2400000,
      "creditAmountCents": 720000,
      "credits": [
        [
          "itc",
          30,
          720000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": null,
      "finalCents": 2400000,
      "finalPpwCents": null,
      "financedCents": 2400000,
      "financedCreditsAppliedCents": 1680000,
      "key": "cash",
      "label": "Pay in full",
      "monthlyCents": null,
      "monthlyCreditsAppliedCents": null,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 1680000,
      "paydownCents": null,
      "postSolarMonthlyCents": 22017,
      "product": "cash",
      "programmeLabel": null,
      "quoted": false,
      "savings": {
        "netCents": -2867397,
        "paidCents": 2400000,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": -2147397,
        "paidCents": 2400000,
        "paybackYear": null,
      },
      "signTodayCents": 0,
      "stickerPpwCents": null,
      "totalCreditsAppliedCents": 2400000,
    },
  ],
  "projectContractValueCents": 4800000,
  "revenueReportCents": 4800000,
  "rowAfterGeneration": {
    "addersInsideRuleCents": 0,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 2400000,
    "baseFinalPpwCents": 0,
    "dealerFeePct": 50,
    "finalPriceCents": 4800000,
    "itcEstimateCents": 0,
  },
  "topLevel": {
    "finalCents": 4800000,
    "financedCents": 4800000,
    "netFinalCreditsAppliedCents": 3360000,
  },
}
`;

exports[`golden server sites: the production floor on the capped partner > records what generation does with Amos's $2.00/W floor at the stored 65% fee 1`] = `
{
  "error": "Fix the blocking issues before generating.",
  "issues": [
    "config.min_offset_unset",
    "pricing.below_lender_floor",
  ],
  "ok": false,
}
`;

exports[`golden server sites: workedExample > derives the cached money columns (recomputeDealMoney, dealMoneyColumns) 1`] = `
{
  "columns": {
    "addersInsideRuleCents": 370000,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 400,
    "dealerFeePct": 25,
    "finalPriceCents": 6493333,
    "itcEstimateCents": 0,
  },
  "recompute": {
    "changed": true,
  },
  "rowAfterRecompute": {
    "addersInsideRuleCents": 370000,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 400,
    "dealerFeePct": 25,
    "finalPriceCents": 6493333,
    "itcEstimateCents": 0,
  },
}
`;

exports[`golden server sites: workedExample > estimates and pays the rep (estimatedSolarCommission, computeSolarCommissionsForProject) 1`] = `
{
  "created": 1,
  "estimate": {
    "basis": "redline",
    "fromSnapshot": false,
    "grossCents": 1000000,
    "netCents": 1000000,
    "state": "estimate",
  },
  "line": {
    "amount": 1000000,
    "baseAmount": 3000000,
    "label": "Solar redline ($1.00/W over $2.00/W · 10,000 W)",
    "solarBasis": "redline",
    "solarGrossAmount": 1000000,
  },
  "refusals": [],
}
`;

exports[`golden server sites: workedExample > generates the document and stamps what reads it (generateProposalVersion, restampLeadValue, solarContractByLead) 1`] = `
{
  "leadValueCents": 4545333,
  "options": [
    {
      "adderLinesFinal": [
        [
          "Main panel upgrade",
          360000,
        ],
        [
          "Steep roof",
          133333,
        ],
      ],
      "addersFinalCents": 493333,
      "baseFinalCents": 4000000,
      "creditAmountCents": 1948000,
      "credits": [
        [
          "itc",
          30,
          1948000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 2000000,
      "finalCents": 6493333,
      "finalPpwCents": 649,
      "financedCents": 6493333,
      "financedCreditsAppliedCents": 4545333,
      "key": "quoted:loan",
      "label": "Example Lender · 25 yr · 6.99%",
      "monthlyCents": 45852,
      "monthlyCreditsAppliedCents": 32096,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 4545333,
      "paydownCents": null,
      "postSolarMonthlyCents": 1644,
      "product": "loan",
      "programmeLabel": "25 yr · 6.99%",
      "quoted": true,
      "savings": {
        "netCents": -6646757,
        "paidCents": 13755600,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": -2519957,
        "paidCents": 9628800,
        "paybackYear": null,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 400,
      "totalCreditsAppliedCents": 6493333,
    },
    {
      "adderLinesFinal": [
        [
          "Main panel upgrade",
          270000,
        ],
        [
          "Steep roof",
          100000,
        ],
      ],
      "addersFinalCents": 370000,
      "baseFinalCents": 3000000,
      "creditAmountCents": 1461000,
      "credits": [
        [
          "itc",
          30,
          1461000,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 1500000,
      "finalCents": 4870000,
      "finalPpwCents": 487,
      "financedCents": 4870000,
      "financedCreditsAppliedCents": 3409000,
      "key": "cash",
      "label": "Pay in full",
      "monthlyCents": null,
      "monthlyCreditsAppliedCents": null,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 3409000,
      "paydownCents": null,
      "postSolarMonthlyCents": 1644,
      "product": "cash",
      "programmeLabel": null,
      "quoted": false,
      "savings": {
        "netCents": 2238843,
        "paidCents": 4870000,
        "paybackYear": 19,
      },
      "savingsCreditsApplied": {
        "netCents": 3699843,
        "paidCents": 4870000,
        "paybackYear": 15,
      },
      "signTodayCents": 0,
      "stickerPpwCents": 300,
      "totalCreditsAppliedCents": 4870000,
    },
    {
      "adderLinesFinal": [
        [
          "Main panel upgrade",
          771429,
        ],
        [
          "Steep roof",
          285714,
        ],
      ],
      "addersFinalCents": 1057143,
      "baseFinalCents": 4440000,
      "creditAmountCents": 2934857,
      "credits": [
        [
          "itc",
          30,
          2934857,
        ],
      ],
      "disclaimer": "Tax credits are claimed on your own federal return and depend on your tax liability and on your eligibility for each credit shown. They are not a discount applied by us and they are not a guarantee. We are not tax advisers — please confirm with your tax professional.",
      "equipmentFinalCents": 4285714,
      "finalCents": 9782857,
      "finalPpwCents": 978,
      "financedCents": 9782857,
      "financedCreditsAppliedCents": 6740000,
      "key": "loan:<id>",
      "label": "Capped Partner · 30 Year Solar",
      "monthlyCents": 27175,
      "monthlyCreditsAppliedCents": 18722,
      "monthlyWithoutPaydownCents": null,
      "netFinalCreditsAppliedCents": 6740000,
      "paydownCents": null,
      "postSolarMonthlyCents": 1644,
      "product": "loan",
      "programmeLabel": "30 Year Solar",
      "quoted": false,
      "savings": {
        "netCents": -521605,
        "paidCents": 9783000,
        "paybackYear": null,
      },
      "savingsCreditsApplied": {
        "netCents": 2521475,
        "paidCents": 6739920,
        "paybackYear": 11,
      },
      "signTodayCents": 108000,
      "stickerPpwCents": 444,
      "totalCreditsAppliedCents": 9782857,
    },
  ],
  "projectContractValueCents": 6493333,
  "revenueReportCents": 6493333,
  "rowAfterGeneration": {
    "addersInsideRuleCents": 370000,
    "addersOutsideRuleCents": 0,
    "baseFinalPerBatteryCents": 0,
    "baseFinalPpwCents": 400,
    "dealerFeePct": 25,
    "finalPriceCents": 6493333,
    "itcEstimateCents": 0,
  },
  "topLevel": {
    "finalCents": 6493333,
    "financedCents": 6493333,
    "netFinalCreditsAppliedCents": 4545333,
  },
}
`;
